<resources>
    <string name="app_name">PandemicWatch</string>

    <!--  Search  -->
    <string name="search_hint">Search country…</string>
    <string name="menu_item_search">Search</string>

    <!-- Alert dialogs -->
    <string name="alert_dialog_positive_button">OK</string>
    <string name="alert_dialog_negative_button">Cancel</string>

    <!-- Screen titles -->
    <string name="screen_title_overview">Overview</string>
    <string name="screen_title_country_list">Countries</string>
    <string name="screen_title_ranking">Ranking</string>
    <string name="screen_title_country">Country</string>
    <string name="screen_title_line_chart">Line chart</string>
    <string name="screen_title_create_comparison">Comparison</string>
    <string name="screen_title_add_country_to_comparison">Select country</string>
    <string name="screen_title_comparison">Comparison</string>

    <!--  Navigation screen  -->
    <string name="menu_item_select_theme">Choose theme</string>
    <string name="select_theme_dialog_title">Choose theme</string>
    <string name="select_theme_dialog_item_light">Light</string>
    <string name="select_theme_dialog_item_dark">Dark</string>
    <string name="select_theme_dialog_item_follow_system">System default</string>
    <string name="select_theme_dialog_item_auto_battery">Set by Battery Saver</string>

    <!-- Overview screen -->
    <string name="overview_updated_label">Updated:</string>
    <string name="overview_affected_countries_label">Affected countries:</string>
    <string name="overview_cases_label">Cases:</string>
    <string name="overview_deaths_label">Deaths:</string>
    <string name="overview_recovered_label">Recovered:</string>
    <string name="overview_active_label">Active:</string>
    <string name="overview_critical_label">Critical:</string>
    <string name="overview_tests_label">Tests:</string>
    <string name="overview_main_section_label">Total</string>
    <string name="overview_today_section_label">Today</string>
    <string name="overview_per_mln_section_label">Per million</string>

    <!-- Country details screen -->
    <string name="country_details_country_label">Country:</string>
    <string name="country_details_continent_label">Continent:</string>
    <string name="country_details_cases_chart_label">Cases chart</string>
    <string name="country_details_deaths_chart_label">Deaths chart</string>
    <string name="country_details_recovered_chart_label">Recovered chart</string>
    <string name="menu_item_add_to_favorites">Add to favorites</string>
    <string name="menu_item_remove_from_favorites">Remove from favorites</string>

    <!-- Country list screen -->
    <string name="country_list_country_flag_content_description">Country flag</string>
    <string name="message_content_not_initialized">Loading initial data</string>

    <!-- Add country to comparison screen -->
    <string name="menu_item_reset_comparison">Remove all</string>
    <string name="menu_item_add_to_comparison">Add country</string>
    <string name="create_comparison_reset_dialog_title">Reset comparison</string>
    <string name="create_comparison_reset_dialog_message">Are you sure you want to reset comparison?</string>
    <string name="create_comparison_empty_message">Add countries to compare</string>

    <!-- Comparison screen -->
</resources>
